Citizen journey copy
Two things need fixing:

Obmultiple to identify income (not income other)
identify-income-with-salary - select #2 not working - should go to select income with salary

--- a/app/views/citizen-truelayer/bank-success.html
+++ b/app/views/citizen-truelayer/bank-success.html
@@ -40,7 +40,7 @@
           <p class="govuk-body">
             <ul class="govuk-list govuk-list--bullet">
               <li>We check your transaction history for incomings and outgoings</li>
-              <li>We only use details for this application, nothing else</li>
+              <li>We only use details for your legal aid application, nothing else</li>
               <li>Your data is stored securely for 5 years and then destroyed</li>
             </ul>
           </p>
@@ -135,7 +135,7 @@
             </table>
             <br>
 -->
-            <a class="govuk-c-button govuk-c-button" href="identify-income" role="button">Continue</a>
+            <a class="govuk-c-button govuk-c-button" href="obmultiple" role="button">Continue</a>
 
           </div>
 
