--- a/app/views/citizen-truelayer/capitalshares.html
+++ b/app/views/citizen-truelayer/capitalshares.html
@@ -22,15 +22,12 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          How much are your stocks or shares worth?
+          How much are your savings and investments worth?
         </h1>
-
-        <p class="govuk-body">You will need to upload copies of your stocks or share certificates later in your application.</p>
-
         <form class="form" action="means-result" method="post">
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="national-insurance-number">
-            Enter the value of your stocks or shares
+            <h3>Enter the value of your stocks or shares</h3>
 
           </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="cap-shares" name="cap-shares" placeholder="0.00" type="number">
