--- a/app/views/citizen-truelayer/dwpdetails.html
+++ b/app/views/citizen-truelayer/dwpdetails.html
@@ -21,10 +21,12 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Check your tax and benefits status
+          Enter your tax and benefits details
         </h1>
 
-        <form class="form" action="dwpconf" method="post">
+        <p class="govuk-body">We will contact the Department for Work and Pensions to check if you are getting benefits.</p>
+
+        <form class="form" action="obbank" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
             Enter your National Insurance number
