--- a/app/views/citizen-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing.html
@@ -419,39 +419,21 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h2 class="govuk-heading-xl">
-              Tell us about your outgoings
+                <h2 class="govuk-heading-xl">
+              Tell us about your outgoings over the last 30 days
         </h2>
         <p class="govuk-body">
-          Add relevant transactions from the last month of your bank statement.
+          Add relevant transactions from your bank statement(s).
         </p>
-        <p class="govuk-body">
-          We use your 3 month transaction history to work out your average monthly outgoings.
-        </p>
-
-        <details>
-          <summary><span class="summary">What outgoings should you tell us about?</span></summary>
-
-          <div class="panel panel-border-narrow">
-
-            <p style="govuk-body">
-              <ul>
-                <li>mortgage</li>
-                <li>rent, board or lodging</li>
-                <li>council tax</li>
-                <li>childcare costs to a registered care provider</li>
-                <li>maintenance payments</li>
-                <li>legal aid contributions</li>
-              </ul>
-            </p>
-          </div>
-        </details>
 
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
                 <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
             </h2>
+              <p class="govuk-body"><span class="govuk-c-label__hint">
+              Add payments for mortgage, rent, board or lodging, and council tax bills
+            </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
@@ -470,8 +452,11 @@
           </li>
           <li>
             <h2 class="task-list-section">
-              <span class="task-list-section-number">2. </span>Childcare
+              <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
             </h2>
+            <p class="govuk-body"><span class="govuk-c-label__hint">
+              Add childcare payments to a registered provider, maintenance payments and existing legal aid contributions 
+            </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="select-childcare">
@@ -481,18 +466,6 @@
             </ul>
           </li>
 
-          <li>
-            <h2 class="task-list-section">
-              <span class="task-list-section-number">3. </span>Other
-            </h2>
-            <ul class="task-list-items">
-              <li class="task-list-item">
-                <a class="task-name" href="#">
-                  Add item
-                </a>
-              </li>
-            </ul>
-          </li>
         </ol>
 
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
