--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -23,20 +23,24 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+        <h1>Provisional result</h1>
+        <br>
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00"> 
+          <div class="govuk-c-panel__body">
+            You will have to make a contribution of
+            </div>  
+            <br>
           <h2 class="govuk-c-panel__title">
-            Provisional result:
+            £123.22 a month
           </h2>
           <div class="govuk-c-panel__body">
-            You should be eligible for financial help
-          </div>
+            for 6 months
+          </div> 
         </div>
 
         <p class="govuk-body">
-          We will complete final checks on any pending or outstanding items when you submit your application. We will work out whether you need to pay anything and let you know the result.
+        Your legal aid contributions are based on the following information.
         </p>
-
-        </br>
 
         <h3 class="govuk-heading">
           Breakdown of provisional result
@@ -51,34 +55,28 @@
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Capital</th>
                   <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" width="150" style="border-width:thick;">&nbsp;</th>
-                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
-                  <td class="govuk-c-table__cell" style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£8,000.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
             </table>
           </div>
@@ -91,29 +89,24 @@
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Gross income</th>
                   <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" width="150" style="border-width:thick;">&nbsp;</th>
-                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,495.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,657.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
             </table>
           </div>
@@ -126,34 +119,28 @@
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Disposable income</th>
                   <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" width="150" style="border-width:thick;">&nbsp;</th>
-                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Child care</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Housing costs</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,800.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total disposable income</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£695.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Disposable income limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£733.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
             </table>
           </div>
