--- a/app/views/citizen-truelayer/obbank.html
+++ b/app/views/citizen-truelayer/obbank.html
@@ -39,7 +39,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link " href="dwpconf ">Back</a>
+      <a class="govuk-c-back-link " href="dwpdetails">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -51,7 +51,7 @@
           <form class="form" id="bankForm" action="bank-success" method="get">
 
             <p class="govuk-body">
-              You will now be redirected to a secure service to sign in to your online banking.
+              You will be redirected to a secure service to sign in to your online banking.
             </p>
 
             <p class="govuk-body">You will need to share all of your bank accounts, including any in joint names or with no money. Always keep your password details private.</p>
@@ -66,8 +66,8 @@
 
             <p class="govuk-body">
               <ul class="govuk-list govuk-list--bullet">
-                <li>You sign in and give temporary access to your accounts</li>
-                <li>We download 3 months' transactions</li>
+                <li>Sign in and authorise access to your accounts</li>
+                <li>We download 3 months of transactions</li>
                 <li>The bank connection automatically ends after 1 hour</li>
                 <li>Your online banking details are not saved</li>
               </ul>
