--- a/app/views/citizen-truelayer/obmultiple.html
+++ b/app/views/citizen-truelayer/obmultiple.html
@@ -14,14 +14,16 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="explain-other-transfer">Back</a>
+    <a class="govuk-c-back-link" href="bank-success">Back</a>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you have an account or ISA with a different bank or building society?
+          Do have an account with a different bank or building society?
         </h1>
+
+          <p class="govuk-body">Sign in to online banking for all accounts you have with different banks.</p>
 
         <form class="form" action="multibank" method="get">
 
