--- a/app/views/citizen-truelayer/select-childcare.html
+++ b/app/views/citizen-truelayer/select-childcare.html
@@ -109,24 +109,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select your childcare payments
+              Select childcare, maintenance and legal aid payments
         </h2>
 
         <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
 
-        <details>
-          <summary><span class="summary">What outgoings should you tell us about?</span></summary>
-
-          <div class="panel panel-border-narrow">
-
-            <p style="govuk-body">
-              <ul>
-                <li>childcare costs to a registered care provider</li>
-              </ul>
-            </p>
-          </div>
-        </details>
-        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
