--- a/app/views/citizen-truelayer/select-other.html
+++ b/app/views/citizen-truelayer/select-other.html
@@ -109,9 +109,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select any other types of income
+              Select benefits, rent and financial support
         </h2>
 
+
+        <p class="govuk-body">Add any state benefits, rent from a property or lodger, student loans and maintenance payments.</p>
         <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <details>
@@ -122,7 +124,7 @@
             <p style="govuk-body">
               <ul>
                 <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                <li>benefits in kind from your employer such as relocation payments</li>
+                <li>extra payments from your employer such as relocation costs</li>
                 <li>board from a family member, lodger or tenant</li>
                 <li>rent from another property</li>
                 <li>maintenance payments</li>
