--- a/app/views/citizen-truelayer/select-salary.html
+++ b/app/views/citizen-truelayer/select-salary.html
@@ -55,7 +55,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select your salary or wages
+              Select salary and pensions
         </h2>
 
         <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
