--- a/app/views/citizen-truelayer/start.html
+++ b/app/views/citizen-truelayer/start.html
@@ -24,22 +24,25 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Apply for financial help
+          Complete your legal aid financial assessment
         </h2>
 
-        <p class="govuk-body">You might not have to pay anything if you are on certain benefits, a low income or have little or no savings.</p>
+         <p class="govuk-body">
+          Name:    <strong>John Doe</strong><br>
+          Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
 
-        <h3>Find out if you can get help</h3>
+        <p class="govuk-body">Find out if your financial situation means you can get legal aid.</p>
+
+         <p class="govuk-body">You might not have to pay legal costs if you are on certain benefits, a low income or have little or no savings.</p>
+
+        <h3>What you will need</h3>
         <p></p>
-
-        <p class="govuk-body">You can provide details about your financial situation by:</p>
-
         <ul class="govuk-list govuk-list--bullet">
-          <li>sharing information from your online banking</li>
-          <li>giving your National Insurance number and date of birth so we can check your tax status and whether you receive benefits</li>
+          <li>your National Insurance number and date of birth</li>
+          <li>your online banking details</li>
         </ul>
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="obconsent" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="obconsent" role="button">Start</a>
 
       </div>
 
