--- a/app/views/citizen-truelayer/submit-means.html
+++ b/app/views/citizen-truelayer/submit-means.html
@@ -20,12 +20,25 @@
 
     <p class="govuk-body"></p>
 
-    <div class="govuk-o-grid">
+      <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <p class="govuk-body">Your results have been submitted to the Legal Aid Agency.</p>
+        <h1 class="govuk-heading-xl">
+          Next steps
+        </h1>
 
-        <p class="govuk-body">Your solicitor will continue your application.</p>
+         <p class="govuk-body">
+        Name:    <strong>John Doe</strong><br>
+          Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
+        
+        <p class="govuk-body">Your results have been submitted to the Legal Aid Agency and to your solicitor.</p>
+
+
+        <p class="govuk-body">Your solicitor will contact you to complete your legal aid application.</p>
+
+
+          <input class="govuk-c-button" type="submit" value="Finish">
+
 
       </div>
     </div>
