--- a/app/views/citizen-truelayer/capitalselect.html
+++ b/app/views/citizen-truelayer/capitalselect.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="capital-assets">Back</a>
+    <a class="govuk-c-back-link" href="property">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -27,7 +27,7 @@
             <div class="govuk-o-form-group">
               <fieldset class="govuk-c-fieldset">
                 <legend class="govuk-c-fieldset__legend">
-                  <h1 class="govuk-heading-xl">What type of savings or investments do you have?</h1>
+                  <h1 class="govuk-heading-xl">Do you have any savings or investments?</h1>
                   <p hidden>Remember to include any shares, assets or savings held by your partner.</p>
                 </legend>
                 <div class="govuk-c-checkboxes__item">
