--- a/app/views/citizen-truelayer/identify-income-salary-other.html
+++ b/app/views/citizen-truelayer/identify-income-salary-other.html
@@ -419,42 +419,18 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Tell us about your income
+          Tell us about your income over the last 30 days
         </h2>
-
-        <p class="govuk-body">
-          Add relevant transactions from the last month of your bank statement.
-        </p>
-        <p class="govuk-body">
-          We use your 3 month transaction history to work out your average monthly income.
-        </p>
-
-        <details>
-          <summary><span class="summary">What income should you tell us about?</span></summary>
-
-          <div class="panel panel-border-narrow">
-
-            <p style="govuk-body">
-              <ul>
-                <li>salary or wages from any jobs you have</li>
-                <li>private and state pension contributions</li>
-                <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                <li>benefits in kind from your employer such as relocation payments</li>
-                <li>board from a family member, lodger or tenant</li>
-                <li>rent from another property</li>
-                <li>maintenance payments</li>
-                <li>student grant or loan</li>
-                <li>financial support from a friend or family member</li>
-              </ul>
-            </p>
-          </div>
-        </details>
+        <p class="govuk-body">Add relevant transactions from your bank statement(s).</p>
 
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-              <span class="task-list-section-number">1. </span>Salary
+              <span class="task-list-section-number">1. </span>Salary and pensions
             </h2>
+            <p class="govuk-body"><span class="govuk-c-label__hint">
+              Add any salary or wages, and income from state and private pensions
+            </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">
@@ -473,20 +449,29 @@
           </li>
           <li>
             <h2 class="task-list-section">
-              <span class="task-list-section-number">2. </span>Pensions
-            </h2>
-            <ul class="task-list-items">
-              <li class="task-list-item">
-                <a class="task-name" href="#">
-                  Add item
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <h2 class="task-list-section">
-              <span class="task-list-section-number">3. </span> Other
-            </h2>
+              <span class="task-list-section-number">2. </span>Benefits, rent and financial support</h2>
+                  <p class="govuk-body"><span class="govuk-c-label__hint">
+              Add any state benefits, rent from a property or lodger, student loans, and maintenance payments
+            </span></p>
+          <details>
+          <summary><span class="summary">What should you tell us about?</span></summary>
+
+          <div class="panel panel-border-narrow">
+
+            <p style="govuk-body">
+              <ul style="govuk">
+                <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                <li>- extra payments from your employer such as relocation costs</li>
+                <li>- board from a family member, lodger or tenant</li>
+                <li>- rent from another property</li>
+                <li>- maintenance payments</li>
+                <li>- student grant or loan</li>
+                <li>- financial support from a friend or family member</li>
+              </ul>
+            </p>
+          </div>
+        </details>
+        <br>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-completed">
@@ -505,7 +490,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-outgoings" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="other-income" role="button">Continue</a>
 
       </div>
 
