--- a/app/views/citizen-truelayer/obconsent.html
+++ b/app/views/citizen-truelayer/obconsent.html
@@ -26,41 +26,29 @@
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Are you happy to share your details with us?</h1>
+                <h1 class="govuk-heading-xl">Do you agree to share your details with us?</h1>
               </legend>
 
-              <p class="govuk-body">We use the information to check how much you earn, how much you spend on things like childcare and whether you receive benefits.</p>
+              <p class="govuk-body">Sign in safely to your online banking and give permission for us to access your accounts for 1 hour.</p>
 
-              <p class="govuk-body">We only use the details to support your application. We do not use it for anything else. <a href="#">Find out how we use and store your personal data</a></p>
+              <p class="govuk-body">We only use your bank transactions to support your legal aid application. We do not use it for anything else.</p>
 
-              <div class="govuk-c-warning-text">
-                <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
-                <strong class="govuk-c-warning-text__text">
-                  Keeping your details secure
-                </strong>
-              </div>
-
-              <p class="govuk-body">
-                <ul class="govuk-list govuk-list--bullet">
-                  <li>Sign in safely to your online banking</li>
-                  <li>Authorise temporary access to your accounts</li>
-                  <li>We take 3 months of transactions to check your financial status</li>
-                  <li>Your data is stored securely for 5 years and then destroyed</li>
-                </ul>
-              </p>
+              <p class="govuk-body"><a href="#">Find out how we use and store your personal data</a></p>
 
               </br>
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  <b>I am happy for you to check my tax and benefits status</b>
+                  <b>I agree for you to check my tax and benefits status</b><br>
+                      using my National Insurance number and date of birth
                 </label>
               </div>
               </br>
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  <b>I am happy to share information from my online banking</b>
+                  <b>I agree for you to check 3 months of bank transactions</b><br>
+                      using temporary access to my online banking
                 </label>
               </div>
 
