--- a/app/views/citizen-truelayer/other-income.html
+++ b/app/views/citizen-truelayer/other-income.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="obmultiple">Back</a>
+    <a class="govuk-c-back-link" href="identify-income-salary-other">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -26,13 +26,13 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Do you have other income or outgoings not paid into or out of your bank accounts?
+              Did you receive any income not paid into your bank?
         </h2>
 
         <div class="govuk-c-radios">
           <fieldset class="govuk-c-fieldset">
             <legend class="govuk-c-fieldset__legend">
-              <p class="govuk-body">You will need to provide evidence to support these transactions.</p>
+              <p class="govuk-body">For example, if you get paid in cash for a temporary or casual job.</p>
             </legend>
             <div class="govuk-c-radios__item">
               <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes" required>
