--- a/app/views/citizen-truelayer/property.html
+++ b/app/views/citizen-truelayer/property.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="other-income">Back</a>
+    <a class="govuk-c-back-link" href="check-evidence">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -22,14 +22,10 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you get any benefits from work that are not money?
+          Do you own your home, either outright or with a mortgage?
         </h1>
 
-        <p class="govuk-body">
-          Benefits in kind include a company car, travel card or health insurance.
-        </p>
-
-        <form class="form" action="identify-outgoings" method="post">
+        <form class="form" action="capitalselect" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
