Fix two bugs in citizen-truelayer + improvements to solicitor

--- a/app/views/solicitor/basic-details-playback.html
+++ b/app/views/solicitor/basic-details-playback.html
@@ -26,7 +26,7 @@
 
           <h2 class="govuk-heading-xl">Are your client's details correct?</h2>
 
-          <form class="form" action="confirm-contact" method="post">
+          <form class="form" action="contact-applicant" method="post">
 
             <dl class="govuk-check-your-answers cya-questions-short">
               <div>
