--- a/app/views/solicitor/confirm-contact.html
+++ b/app/views/solicitor/confirm-contact.html
@@ -26,12 +26,12 @@
 
           <h2 class="govuk-heading-xl">Your client has been contacted</h2>
 
-          <form class="form" action="post-contact" method="post">
+          <form class="form" action="case-dashboard" method="post">
 
             <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
               <h2 class="govuk-c-panel__title">A link has been sent to your client</h2>
               <p class="govuk-c-panel__body">Your reference:</p>
-              <p class="govuk-c-panel__body">2017/LAA/4ewrqfdd</p>
+              <p class="govuk-c-panel__body">2018/LAA/4ewrqfdd</p>
 
               <div class="govuk-c-panel__body">
               </div>
