--- a/app/views/solicitor/contact-applicant.html
+++ b/app/views/solicitor/contact-applicant.html
@@ -31,7 +31,7 @@
           <form class="form" action="confirm-contact" method="post">
 
             <div class="govuk-c-radios">
-              <label class="govuk-c-label" for="type" type="type">
+              <label class="govuk-c-label" for="type" type="radio">
                 How does your client prefer to be contacted?
               </label>
               </br>
