--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,79 +1,45 @@
-{% extends "govuk_template.html" %}
+{% extends "govuk_template.html" %} {% from "back-link/macro.njk" import govukBackLink %} {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %} {% from "button/macro.njk" import govukButton %} {% from "checkboxes/macro.njk" import govukCheckboxes
+%} {% from "cookie-banner/macro.njk" import govukCookieBanner %} {% from "date-input/macro.njk" import govukDateInput %} {% from "details/macro.njk" import govukDetails %} {% from "error-message/macro.njk" import govukErrorMessage %} {% from "error-summary/macro.njk"
+import govukErrorSummary %} {% from "fieldset/macro.njk" import govukFieldset %} {% from "file-upload/macro.njk" import govukFileUpload %} {% from "input/macro.njk" import govukInput %} {% from "label/macro.njk" import govukLabel %} {% from "panel/macro.njk"
+import govukPanel %} {% from "phase-banner/macro.njk" import govukPhaseBanner %} {% from "previous-next/macro.njk" import govukPreviousNext %} {% from "radios/macro.njk" import govukRadios %} {% from "select/macro.njk" import govukSelect %} {% from "skip-link/macro.njk"
+import govukSkipLink %} {% from "table/macro.njk" import govukTable %} {% from "tag/macro.njk" import govukTag %} {% from "textarea/macro.njk" import govukTextarea %} {% from "warning-text/macro.njk" import govukWarningText %} {% block head %} {% include
+"includes/head.html" %} {% endblock %} {% block cookie_message %}
+<p>{{cookieText | safe }}</p>
+{% endblock %} {% block proposition_header %}
 
-{% from "back-link/macro.njk"     import govukBackLink %}
-{% from "breadcrumbs/macro.njk"   import govukBreadcrumbs %}
-{% from "button/macro.njk"        import govukButton %}
-{% from "checkboxes/macro.njk"    import govukCheckboxes %}
-{% from "cookie-banner/macro.njk" import govukCookieBanner %}
-{% from "date-input/macro.njk"    import govukDateInput %}
-{% from "details/macro.njk"       import govukDetails %}
-{% from "error-message/macro.njk" import govukErrorMessage %}
-{% from "error-summary/macro.njk" import govukErrorSummary %}
-{% from "fieldset/macro.njk"      import govukFieldset %}
-{% from "file-upload/macro.njk"   import govukFileUpload %}
-{% from "input/macro.njk"         import govukInput %}
-{% from "label/macro.njk"         import govukLabel %}
-{% from "panel/macro.njk"         import govukPanel %}
-{% from "phase-banner/macro.njk"  import govukPhaseBanner %}
-{% from "previous-next/macro.njk" import govukPreviousNext %}
-{% from "radios/macro.njk"        import govukRadios %}
-{% from "select/macro.njk"        import govukSelect %}
-{% from "skip-link/macro.njk"     import govukSkipLink %}
-{% from "table/macro.njk"         import govukTable %}
-{% from "tag/macro.njk"           import govukTag %}
-{% from "textarea/macro.njk"      import govukTextarea %}
-{% from "warning-text/macro.njk"  import govukWarningText %}
-
-{% block head %}
-  {% include "includes/head.html" %}
-{% endblock %}
-
-{% block cookie_message %}
-  <p>{{cookieText | safe }}</p>
-{% endblock %}
-
-{% block proposition_header %}
-
-  <div class="header-proposition">
-    <div class="content">
-      <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
-      <nav id="proposition-menu">
-        <a href="/" id="proposition-name">
+<div class="header-proposition">
+  <div class="content">
+    <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+    <nav id="proposition-menu">
+      <a href="/" id="proposition-name">
           {# Set serviceName in config.js. Use a block to override on a page. #}
           {% block service_name %}
             {% if serviceName %} {{ serviceName }} {% endif %}
           {% endblock %}
         </a>
-        <!--
+      <!--
         <ul id="proposition-links">
           <li><a href="url-to-page-1" class="active">Navigation item #1</a></li>
           <li><a href="url-to-page-2">Navigation item #2</a></li>
         </ul>
         -->
-      </nav>
-    </div>
+    </nav>
   </div>
+</div>
 
-{% endblock %}
-
-{% block header_class %}
-  with-proposition
-{% endblock %}
-
-{% block footer_support_links %}
-  {% if useAutoStoreData %}
-    <ul>
-      <li>
-        <a href="/prototype-admin/clear-data">Clear data</a>
-      </li>
-    </ul>
-  {% endif %}
-{% endblock %}
-
-{% block body_end %}
-  {% block scripts %}
-    {% include "includes/scripts.html" %}
-    {% block page_scripts %}{% endblock %}
-  {% endblock %}
-  <!-- GOV.UK Prototype kit {{releaseVersion}} -->
+{% endblock %} {% block header_class %} with-proposition {% endblock %} {% block footer_support_links %}
+<div>
+  <h3 class="govuk-heading-l">Support</h3>
+  <p class="govuk-body"><strong>Case enquiries:</strong> 0300 200 2020 (Monday to Friday, 09:00 - 17:00)</p>
+  <p class="govuk-body"><strong>Technical support:</strong> 0300 200 2020 (Monday to Friday, 09:00 - 17:00) or email
+    <a href="mailto:online-support@justice.gov.uk">online-support@justice.gov.uk</a> </p>
+</div>
+{% if useAutoStoreData %}
+<ul>
+  <li>
+    <a href="/prototype-admin/clear-data">Clear data</a>
+  </li>
+</ul>
+{% endif %} {% endblock %} {% block body_end %} {% block scripts %} {% include "includes/scripts.html" %} {% block page_scripts %}{% endblock %} {% endblock %}
+<!-- GOV.UK Prototype kit {{releaseVersion}} -->
 {% endblock %}
