--- a/app/views/solicitor/page08.html
+++ b/app/views/solicitor/page08.html
@@ -1,31 +1,48 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block proposition_header %}
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block header_class %}
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block content %}
 
-<body>
-  <div class="govuk-o-width-container">
+<div class="govuk-o-width-container">
 
-    <div class="govuk-c-phase-banner">
-      <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+  <div class="govuk-c-phase-banner">
+    <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
         alpha
       </strong>
-        <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
         This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
       </span>
-      </p>
+    </p>
+  </div>
+
+  <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"></p>
+
+    <div class="govuk-o-grid">
+      <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
+
+        <h2 class="govuk-heading-xl">
+          Based on what the applicant has told us so far they would be eligable for legal aid
+        </h2>
+
+        <p class="govuk-body">We were granted access to:</p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="#">3 bank accounts</a></li>
+          <li><a href="#">1 ISA account</a></li>
+          <li><a href="#">1 Partridge</a></li>
+          <li><a href="#">2 Pear trees</a></li>
+        </ul>
+
+        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/solicitor/page09" role="button">Next</a>
+
+      </div>
+
     </div>
 
-    <main role="main" class="govuk-o-main-wrapper">
+  </main>
+</div>
 
-      <a class="govuk-c-back-link" href="page07">Back</a>
-
-      <p class="govuk-body">Text here</p>
-
-      <a class="govuk-c-button govuk-c-button" href="page09" role="button">Continue</a>
-
-    </main>
-  </div>
-</body>
 {% endblock %}
